implementations/java/javacc/WaebricLexer_Eerste opzet/src/WaeberLexer/eg3.java
/* Generated By:JavaCC: Do not edit this line. eg3.java */
package WaeberLexer;

import WaeberLexer.syntaxtree.*;
import WaeberLexer.visitor.*;
import java.io.*;
import java.util.Vector;


@SuppressWarnings("all")
public class eg3 implements eg3Constants {
   public static void main(String args[])
   {
      System.out.println("Reading from Waebric File...");
      String fileData = "";
      try
      {
         FileReader fr = new FileReader("c:\\waebricfile.wae");
         BufferedReader br = new BufferedReader(fr);
         String s;
         while ( (s = br.readLine()) != null )
         {
            fileData += s + "\r\n";
         }
         fileData += "ENDOFFILE";
      }
      catch (Exception e)
      {
         System.out.println("IO Exceptie, controleer bestand: " + e.getMessage());
      }
      ByteArrayInputStream bs = new ByteArrayInputStream(fileData.getBytes());
      new eg3(bs);
      try
      {
         Start start = eg3.Start();
         Visitor v = new MyVisitor();
         start.accept(v);
      }
      catch (Exception e)
      {
         System.out.println("Fout: " + e.getMessage());
      }
   }

  static final public Start Start() throws ParseException {
   Expression n0;
   NodeToken n1;
   Token n2;
    n0 = Expression();
    n2 = jj_consume_token(ENDOFFILE);
                    n1 = JTBToolkit.makeNodeToken(n2);
     {if (true) return new Start(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public Expression Expression() throws ParseException {
   NodeListOptional n0 = new NodeListOptional();
   NodeChoice n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
   NodeToken n6;
   Token n7;
   NodeToken n8;
   Token n9;
   NodeToken n10;
   Token n11;
   NodeToken n12;
   Token n13;
   NodeToken n14;
   Token n15;
   NodeToken n16;
   Token n17;
   NodeToken n18;
   Token n19;
   NodeToken n20;
   Token n21;
   NodeToken n22;
   Token n23;
   NodeToken n24;
   Token n25;
   NodeToken n26;
   Token n27;
   NodeToken n28;
   Token n29;
   NodeToken n30;
   Token n31;
   NodeToken n32;
   Token n33;
   NodeToken n34;
   Token n35;
   NodeToken n36;
   Token n37;
   NodeToken n38;
   Token n39;
   NodeToken n40;
   Token n41;
   NodeToken n42;
   Token n43;
   NodeToken n44;
   Token n45;
   NodeToken n46;
   Token n47;
   NodeToken n48;
   Token n49;
   NodeToken n50;
   Token n51;
   NodeToken n52;
   Token n53;
   NodeToken n54;
   Token n55;
   NodeToken n56;
   Token n57;
   NodeToken n58;
   Token n59;
   NodeToken n60;
   Token n61;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case MODULE:
      case SITE:
      case END:
      case DEF:
      case ECHO:
      case YIELD:
      case EACH:
      case IF:
      case LET:
      case COMMENT:
      case CDATA:
      case IMPORT:
      case IDENTIFIER:
      case PLUS:
      case MINUS:
      case IS:
      case OPAR:
      case CPAR:
      case OBRACE:
      case CBRACE:
      case SLASH:
      case DOT:
      case COLON:
      case QUOTATION:
      case SEMICOLON:
      case COMMA:
      case AMPERSAND:
      case FLOATINGPOINT:
      case AT:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MODULE:
        n3 = jj_consume_token(MODULE);
                       n2 = JTBToolkit.makeNodeToken(n3);
           n1 = new NodeChoice(n2, 0);
        break;
      case SITE:
        n5 = jj_consume_token(SITE);
                     n4 = JTBToolkit.makeNodeToken(n5);
           n1 = new NodeChoice(n4, 1);
        break;
      case END:
        n7 = jj_consume_token(END);
                    n6 = JTBToolkit.makeNodeToken(n7);
           n1 = new NodeChoice(n6, 2);
        break;
      case DEF:
        n9 = jj_consume_token(DEF);
                    n8 = JTBToolkit.makeNodeToken(n9);
           n1 = new NodeChoice(n8, 3);
        break;
      case ECHO:
        n11 = jj_consume_token(ECHO);
                      n10 = JTBToolkit.makeNodeToken(n11);
           n1 = new NodeChoice(n10, 4);
        break;
      case YIELD:
        n13 = jj_consume_token(YIELD);
                       n12 = JTBToolkit.makeNodeToken(n13);
           n1 = new NodeChoice(n12, 5);
        break;
      case EACH:
        n15 = jj_consume_token(EACH);
                      n14 = JTBToolkit.makeNodeToken(n15);
           n1 = new NodeChoice(n14, 6);
        break;
      case IF:
        n17 = jj_consume_token(IF);
                    n16 = JTBToolkit.makeNodeToken(n17);
           n1 = new NodeChoice(n16, 7);
        break;
      case LET:
        n19 = jj_consume_token(LET);
                     n18 = JTBToolkit.makeNodeToken(n19);
           n1 = new NodeChoice(n18, 8);
        break;
      case COMMENT:
        n21 = jj_consume_token(COMMENT);
                         n20 = JTBToolkit.makeNodeToken(n21);
           n1 = new NodeChoice(n20, 9);
        break;
      case CDATA:
        n23 = jj_consume_token(CDATA);
                       n22 = JTBToolkit.makeNodeToken(n23);
           n1 = new NodeChoice(n22, 10);
        break;
      case IMPORT:
        n25 = jj_consume_token(IMPORT);
                        n24 = JTBToolkit.makeNodeToken(n25);
           n1 = new NodeChoice(n24, 11);
        break;
      case IDENTIFIER:
        n27 = jj_consume_token(IDENTIFIER);
                            n26 = JTBToolkit.makeNodeToken(n27);
           n1 = new NodeChoice(n26, 12);
        break;
      case INTEGER_LITERAL:
        n29 = jj_consume_token(INTEGER_LITERAL);
                                 n28 = JTBToolkit.makeNodeToken(n29);
           n1 = new NodeChoice(n28, 13);
        break;
      case PLUS:
        n31 = jj_consume_token(PLUS);
                      n30 = JTBToolkit.makeNodeToken(n31);
           n1 = new NodeChoice(n30, 14);
        break;
      case MINUS:
        n33 = jj_consume_token(MINUS);
                       n32 = JTBToolkit.makeNodeToken(n33);
           n1 = new NodeChoice(n32, 15);
        break;
      case IS:
        n35 = jj_consume_token(IS);
                    n34 = JTBToolkit.makeNodeToken(n35);
           n1 = new NodeChoice(n34, 16);
        break;
      case OPAR:
        n37 = jj_consume_token(OPAR);
                      n36 = JTBToolkit.makeNodeToken(n37);
           n1 = new NodeChoice(n36, 17);
        break;
      case CPAR:
        n39 = jj_consume_token(CPAR);
                      n38 = JTBToolkit.makeNodeToken(n39);
           n1 = new NodeChoice(n38, 18);
        break;
      case OBRACE:
        n41 = jj_consume_token(OBRACE);
                        n40 = JTBToolkit.makeNodeToken(n41);
           n1 = new NodeChoice(n40, 19);
        break;
      case CBRACE:
        n43 = jj_consume_token(CBRACE);
                        n42 = JTBToolkit.makeNodeToken(n43);
           n1 = new NodeChoice(n42, 20);
        break;
      case SLASH:
        n45 = jj_consume_token(SLASH);
                       n44 = JTBToolkit.makeNodeToken(n45);
           n1 = new NodeChoice(n44, 21);
        break;
      case DOT:
        n47 = jj_consume_token(DOT);
                     n46 = JTBToolkit.makeNodeToken(n47);
           n1 = new NodeChoice(n46, 22);
        break;
      case COLON:
        n49 = jj_consume_token(COLON);
                       n48 = JTBToolkit.makeNodeToken(n49);
           n1 = new NodeChoice(n48, 23);
        break;
      case QUOTATION:
        n51 = jj_consume_token(QUOTATION);
                           n50 = JTBToolkit.makeNodeToken(n51);
           n1 = new NodeChoice(n50, 24);
        break;
      case SEMICOLON:
        n53 = jj_consume_token(SEMICOLON);
                           n52 = JTBToolkit.makeNodeToken(n53);
           n1 = new NodeChoice(n52, 25);
        break;
      case COMMA:
        n55 = jj_consume_token(COMMA);
                       n54 = JTBToolkit.makeNodeToken(n55);
           n1 = new NodeChoice(n54, 26);
        break;
      case AMPERSAND:
        n57 = jj_consume_token(AMPERSAND);
                           n56 = JTBToolkit.makeNodeToken(n57);
           n1 = new NodeChoice(n56, 27);
        break;
      case FLOATINGPOINT:
        n59 = jj_consume_token(FLOATINGPOINT);
                               n58 = JTBToolkit.makeNodeToken(n59);
           n1 = new NodeChoice(n58, 28);
        break;
      case AT:
        n61 = jj_consume_token(AT);
                    n60 = JTBToolkit.makeNodeToken(n61);
           n1 = new NodeChoice(n60, 29);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        n0.addNode(n1);
    }
     n0.nodes.trimToSize();
     {if (true) return new Expression(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public AdditiveExpression AdditiveExpression() throws ParseException {
     {if (true) return new AdditiveExpression();}
    throw new Error("Missing return statement in function");
  }

  static final public MultiplicativeExpression MultiplicativeExpression() throws ParseException {
     {if (true) return new MultiplicativeExpression();}
    throw new Error("Missing return statement in function");
  }

  static final public UnaryExpression UnaryExpression() throws ParseException {
     {if (true) return new UnaryExpression();}
    throw new Error("Missing return statement in function");
  }

  static final public Identifier Identifier() throws ParseException {
     {if (true) return new Identifier();}
    throw new Error("Missing return statement in function");
  }

  static final public MyInteger MyInteger() throws ParseException {
     {if (true) return new MyInteger();}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public eg3TokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[2];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xfe5ffe80,0xfe5ffe80,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x1ff,0x1ff,};
   }

  /** Constructor with InputStream. */
  public eg3(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public eg3(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new eg3TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public eg3(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new eg3TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public eg3(eg3TokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(eg3TokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[41];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 2; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 41; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
class MyVisitor extends DepthFirstVisitor
{
   public void visit(NodeToken n)
   {
      System.out.println(n.tokenImage + "     ->     "+ n.kind);
   }
}

class JTBToolkit {
   static NodeToken makeNodeToken(Token t) {
      return new NodeToken(t.image.intern(), t.kind, t.beginLine, t.beginColumn, t.endLine, t.endColumn);
   }
}
